# MeshPlanner

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  crossval.yml  publish.yml
docs/: itm-cross-validation.md
meshplanner-app/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.crossval.ts  vitest.workspace.ts  wrangler.toml
meshplanner-app/e2e/: app.spec.ts
meshplanner-app/e2e/fixtures/: dem_tile_fixture.tif  invalid.csv  sites.csv  sites.geojson
meshplanner-app/public/: _headers
meshplanner-app/public/itmlogic/: runner.py
meshplanner-app/src/: App.css  App.tsx  index.css  main.tsx
meshplanner-app/src/store/: index.ts
meshplanner-app/src/tests/: example.test.ts  setup.ts
meshplanner-app/src/workers/: coverage-manager.ts  coverage.worker.ts
meshplanner-app/test-results/: .last-run.json
meshplanner-app/test-results/app-MeshPlanner-E2E-6-Erro-b881f-oad-invalid-CSV-shows-error-chromium/: error-context.md
meshplanner-app/test-results/app-MeshPlanner-E2E-7-hiGH-01505-h-hiGHS-returns-source-ilp--chromium/: error-context.md
scripts/: fetch_reference.sh  validate_asheville.sh
src/meshplanner/: __init__.py  batch.py  validate.py
tests/: conftest.py  test_combine.py  test_export.py  test_hilltop.py  test_optimize.py  test_propagation.py  test_sites.py  test_terrain.py  test_validation.py
tests/cross_validation/: generate_profiles.py  runner.py  test_python.py
(+75 files in other folders)
