[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshplanner"
version = "0.1.0"
description = "LoRa Network Site Planner for Disaster Recovery"
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.1",
    "shapely>=2.0",
    "PuLP>=2.7",
    "tqdm>=4.65",
    "requests>=2.31",
    "itmlogic>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
meshplanner = "meshplanner.cli.app:cli"

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet access to download DEM tiles",
    "slow: tests that take longer than a few seconds",
]
